app-kampusreport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-kampusreport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-kampusreport
  template:
    metadata:
      labels:
        app: app-kampusreport
    spec:
      containers:
        - name: kampusreport
          image: wabsense/kampusreport:2.0
          command: ["/bin/sh", "-c"]
          args:
            - |
              # Double-check permissions
              echo "Verifying permissions..."
              chmod -R 777 /var/www/kampus_report/storage
              chmod -R 777 /var/www/kampus_report/bootstrap/cache
              
              # Modify PHP-FPM to listen on all interfaces
              echo "Configuring PHP-FPM to listen on all interfaces..."
              sed -i 's/listen = 127.0.0.1:9000/listen = 9000/g' /usr/local/etc/php-fpm.d/www.conf
              
              # Start PHP-FPM
              echo "Starting PHP-FPM..."
              php-fpm
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: app-code
              mountPath: /var/www/kampus_report
            - name: app-kampusreport-storage
              mountPath: /var/www/kampus_report/storage
      volumes:
        - name: app-code
          persistentVolumeClaim:
            claimName: app-code-claim
        - name: app-kampusreport-storage
          persistentVolumeClaim:
            claimName: app-kampusreport-storage-pvc
      imagePullSecrets:
        - name: dockerhub-secret
