db-kampusreport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-kampusreport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-kampusreport
  template:
    metadata:
      labels:
        app: db-kampusreport
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-kampusreport-data
              mountPath: /var/lib/mysql
      volumes:
        - name: db-kampusreport-data
          persistentVolumeClaim:
            claimName: db-kampusreport-pvc
