nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: app-code
          mountPath: /var/www/kampus_report
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: app-code
        persistentVolumeClaim:
          claimName: app-code-claim
      imagePullSecrets:
      - name: dockerhub-secret
