app-kampusreport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-kampusreport-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: app-kampusreport
