db-kampusreport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-kampusreport-service
spec:
  selector:
    app: db-kampusreport
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
